--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8080
 client.url=${CLIENT_URL:http://localhost:9090}
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+#spring.jpa.show-sql=true
 
-spring.datasource.driverClassName=${SPRING_DRIVER_CLASS_NAME:org.h2.Driver}
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:ewm}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
-spring.h2.console.enabled=true
+spring.datasource.driverClassName=${SPRING_DRIVER_CLASS_NAME:org.postgresql.Driver}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:6542/ewm}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:db_admin}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:AbRaKaDaBrA}
