Added functionality for creating/updating/deleting comments and liking/disliking comments

--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ client.url=${CLIENT_URL:http://localhost:9090}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 spring.datasource.driverClassName=${SPRING_DRIVER_CLASS_NAME:org.postgresql.Driver}
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:6542/ewm}
